# SouthsideMusic

./: .gitattributes  .gitignore  .requirements_sha256  .ruff.toml  AGENTS.md  CLAUDE.md  LICENSE  Launch.vbs  README.md  SouthsideMusic_Story.md  bootstrap.py  build.bat  build_with_console.bat  embed_python_requirements.txt  ffcache51GoiE  full_requirements.txt  get-pip.py  gitlog.txt  index.js  installed_release.json  installer.iss  launcher.py  nuitka-crash-report.xml  pyproject.toml  requirements.txt  setup_workspace.py  test.py  updates.bat  项目深度分析报告.md
.codex/environments/: environment.toml
docs/: README.md  README_zh.md  SouthsideMusic_Story.md
ffmpeg/lib/: avfilter-11.def  avformat-62.def  avutil-60.def
scripts/: create_icon.py  download_ncm_api_reference.py  list_big_files.bat
src/: imports.py  launch.py  main.py  test.py
src/core/: app_context.py  audio_player.py  backend.py  color.py  config.py  crossfade.py  debugging.py  dialogs.py  downloader.py  favorites.py  free_threaded_worker.py  http_utils.py  i18n.py  icons.py  image.py  llm.py  llm_tools.py  loudness.py  lyrics.py  models.py  netease_backend.py  playing_manager.py  qt_utils.py  smooth.py  soundfile.py  stream_decoder.py  theme.py  time_format.py  weighted_random.py  ws_server.py
src/pyncm/: __init__.py  __main__.py
src/services/: update.py
src/utils/: color_util.py  config_util.py  darkdetect_util.py  dialog_util.py  favorite_util.py  icon_util.py  image_util.py  loading_util.py  loudness_balance_util.py  lyric_util.py  play_util.py  pyside_util.py  random_util.py  requests_util.py  (+3 more)
(+85 files in other folders)
