[project]
name = "SouthsideMusic"
version = "v4"
description = "Call NetEaseCloudMusic api to get musics!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "darkdetect>=0.8.0",
    "nuitka>=4.0",
    "numpy>=2.4.2",
    "pydub>=0.25.1",
    "pyloudnorm>=0.2.0",
    "pyside6>=6.10.2",
    "pyside6-fluent-widgets>=1.11.1",
    "requests>=2.32.5",
    "sounddevice>=0.5.5",
]
