[project]
name = "SouthsideMusic"
version = "v7"
description = "Advanced music player"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "darkdetect>=0.8.0",
    "nuitka>=4.0",
    "numpy>=2.4.2",
    "pydub>=0.25.1",
    "pyside6>=6.10.2",
    "pyside6-fluent-widgets>=1.11.1",
    "requests>=2.32.5",
    "scipy>=1.17.0",
    "sounddevice>=0.5.5",
]
