[project]
name = "SouthsideMusic"
version = "v19"
description = "Advanced music player"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "darkdetect>=0.8.0",
    "hpyt>=1.4.0",
    "inquirer>=3.4.1",
    "mutagen>=1.47.0",
    "nuitka>=4.0.8",
    "numpy>=2.4.2",
    "pillow>=12.2.0",
    "pydub>=0.25.1",
    "pymusiclibrary>=0.0.4",
    "pyncm>=1.8.1",
    "pyside6>=6.10.2",
    "pyside6-fluent-widgets>=1.11.1",
    "qrcode>=8.2",
    "requests>=2.32.5",
    "scipy>=1.17.0",
    "sounddevice>=0.5.5",
    "toml>=0.10.2",
    "tornado>=6.5.4",
]
